# aws-bedrock-snippet

./: .gitignore  README.md  pyproject.toml
src/bedrock_snippet/: app.py  main.py
src/bedrock_snippet/models/agent/: resource.py
src/bedrock_snippet/models/guardrail/: __init__.py  configuration.py
src/bedrock_snippet/models/prompt/: __init__.py  configuration.py  content.py  request.py  variant.py
src/bedrock_snippet/models/request/: __init__.py  guardrail_management.py  invoke_model.py  prompt_management.py
src/bedrock_snippet/services/: __init__.py  guardrail_management.py  invoke_prompt.py  prompt_management.py
tests/: test_models_prompt.py  test_prompt_management_service.py
